# LLMs-FPGA_Benchmark

./: .dockerignore  .gitignore  Dockerfile.max  Makefile  README.md  docker-compose.yml  example_usage.py  pyproject.toml
analysis/: benchmark_analysis.ipynb  medium_article.md
docker/: run_inference.py
models/test_model_tokenizer/: tokenizer.json
models/tiny_llm_savedmodel/: fingerprint.pb  saved_model.pb
models/tiny_llm_savedmodel/variables/: variables.index
models/tiny_llm_tokenizer/: tokenizer.json
src/llms_fpga_benchmark/: __init__.py  benchmark.py  cli.py  docker_manager.py  model_converter.py  model_loader.py  prompt_generator.py  workloads.py
whls/: README.md
