[project]
name = "llms-fpga-benchmark"
version = "0.1.0"
description = "Benchmark tool for Transformer model inference on CPU, GPU (CUDA), and Google Coral"
readme = "README.md"
authors = [
  {name = "Pieter Geelen", email = "pieter@geelen.io"}
]
requires-python = ">=3.9,<3.10"
dependencies = [
    "docker>=6.1.0",
    "numpy>=1.24.0",
    "psutil>=5.9.0",
    "pynvml>=11.5.0",
    "pyyaml>=6.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "tensorflow>=2.13.0",
    "huggingface-hub>=0.16.0",
    "onnx>=1.10.0",
    "onnx-tf>=1.10.0",
    "sentencepiece>=0.1.0",
]

[project.scripts]
llms-fpga-benchmark = "llms_fpga_benchmark.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.287",
]
analysis = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "seaborn>=0.13.0",
    "matplotlib>=3.8.0",
    "pandas>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.287",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

